"Open on Mouse Over" does not work in all menus #66316

Closed
opened 2019-07-01 22:34:33 +02:00 by SABRI Salim · 7 comments

System Information
Operating system: Linux-4.15.0-50-generic-x86_64-with-debian-buster-sid 64 Bits
Graphics card: GeForce GTX 1080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 390.116

Blender Version
Broken: version: 2.80 (sub 74), branch: master, commit date: 2019-06-30 19:51, hash: bbb3500c97
Worked: (optional)

Short description of error
"Open on Mouse Over" does not work with "Pivot point menu" and "Transformation orientation" and ...others

Exact steps for others to reproduce the error
Activate "Open on Mouse Over" in Blender Preferences then test for all menus

**System Information** Operating system: Linux-4.15.0-50-generic-x86_64-with-debian-buster-sid 64 Bits Graphics card: GeForce GTX 1080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 390.116 **Blender Version** Broken: version: 2.80 (sub 74), branch: master, commit date: 2019-06-30 19:51, hash: `bbb3500c97` Worked: (optional) **Short description of error** "Open on Mouse Over" does not work with "Pivot point menu" and "Transformation orientation" and ...others **Exact steps for others to reproduce the error** Activate "Open on Mouse Over" in Blender Preferences then test for all menus
Author

Added subscriber: @Dalkoom

Added subscriber: @Dalkoom

Added subscriber: @WilliamReynish

Added subscriber: @WilliamReynish

technically those are not menus but popovers. But I guess they could also react to this option.

technically those are not menus but popovers. But I guess they could also react to this option.

Added subscribers: @brecht, @mano-wii

Added subscribers: @brecht, @mano-wii
Brecht Van Lommel was assigned by Germano Cavalcante 2019-07-02 00:15:43 +02:00

@brecht, you've worked in this area before -> 97c7db168d
It might be a good idea to support UI_BTYPE_MENUs too.

@brecht, you've worked in this area before -> 97c7db168d It might be a good idea to support `UI_BTYPE_MENU`s too.

This issue was referenced by b708917d94

This issue was referenced by b708917d94afa3a77be5e571b1c36a364d2ec6b5

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#66316
No description provided.