Fix T66316: "Open on Mouse Over" doesn't work in some popovers

Popovers created from `UILayout.prop_with_popover` opening on mouse-over.